<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <!-- Display para resultados -->
    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="end|center_vertical"
        android:hint="@string/display_hint"
        android:textSize="40sp"
        android:inputType="none"
        android:background="@drawable/display_background"
        android:textColor="@color/display_text_color"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Fila 1: CE, C, /, * -->
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textColor="@color/operator_text"
        android:background="@drawable/operator_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintStart_toEndOf="@id/btn_c"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textColor="@color/operator_text"
        android:background="@drawable/operator_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_divide"
        app:layout_constraintWidth_percent="0.25" />

    <!-- Fila 2: 7, 8, 9, - -->
    <Button
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_clear"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_clear"
        app:layout_constraintStart_toEndOf="@id/btn_8"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="@color/operator_text"
        android:background="@drawable/operator_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_9"
        app:layout_constraintWidth_percent="0.25" />

    <!-- Fila 3: 4, 5, 6, + -->
    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="@color/operator_text"
        android:background="@drawable/operator_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_6"
        app:layout_constraintWidth_percent="0.25" />

    <!-- Fila 4: 1, 2, 3, = -->
    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:textColor="@color/operator_text"
        android:background="@drawable/operator_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintWidth_percent="0.25" />

    <!-- Fila 5: 0, ., vacío -->
    <Button
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textColor="@color/button_text"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintWidth_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>
